[gd_scene load_steps=5 format=3 uid="uid://bmp7tet8rv5bl"]

[ext_resource type="Theme" uid="uid://dsfqtpvj7dao1" path="res://theme/baseTheme.tres" id="1_awg3s"]
[ext_resource type="Texture2D" uid="uid://bdb3thpjbognu" path="res://assets/resources_basic1.png" id="1_e07bi"]
[ext_resource type="Script" path="res://GameRes/ComponentControl.gd" id="1_q444n"]
[ext_resource type="Texture2D" uid="uid://bi172w08sirb6" path="res://assets/resources_basic89.png" id="4_bjfp8"]

[node name="MarginContainer" type="MarginContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(87.9, 65.73)
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_bottom = 5
script = ExtResource("1_q444n")

[node name="SizeController" type="Control" parent="."]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(400, 400)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1
mouse_default_cursor_shape = 2

[node name="ComponentControl" type="VBoxContainer" parent="SizeController"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.0
offset_top = -62.0
offset_right = 58.0
offset_bottom = 62.0
grow_horizontal = 2
grow_vertical = 2

[node name="ComponentControl" type="PanelContainer" parent="SizeController/ComponentControl"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1
theme = ExtResource("1_awg3s")

[node name="ComponentControl" type="VBoxContainer" parent="SizeController/ComponentControl/ComponentControl"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="MyInfo" type="HBoxContainer" parent="SizeController/ComponentControl/ComponentControl/ComponentControl"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="NameLabel" type="Label" parent="SizeController/ComponentControl/ComponentControl/ComponentControl/MyInfo"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 1
theme = ExtResource("1_awg3s")
theme_override_font_sizes/font_size = 41
text = "ComponentName"
horizontal_alignment = 1
vertical_alignment = 1

[node name="IconText" type="TextureRect" parent="SizeController/ComponentControl/ComponentControl/ComponentControl/MyInfo"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("1_e07bi")
expand_mode = 2
stretch_mode = 5

[node name="QuantityBar" type="ProgressBar" parent="SizeController/ComponentControl/ComponentControl/ComponentControl"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 26.035)
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 1
show_percentage = false

[node name="Label" type="Label" parent="SizeController/ComponentControl/ComponentControl/ComponentControl/QuantityBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.0
offset_right = 20.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_font_sizes/font_size = 26
text = "1/10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="SizeController/ComponentControl/ComponentControl/ComponentControl"]
layout_mode = 2
alignment = 1

[node name="BufferBar" type="ProgressBar" parent="SizeController/ComponentControl/ComponentControl/ComponentControl/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
mouse_filter = 1
max_value = 1.0
show_percentage = false

[node name="InfoButton" type="Button" parent="SizeController/ComponentControl/ComponentControl/ComponentControl/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(25.4, 25.585)
layout_mode = 2
mouse_filter = 1
toggle_mode = true
icon = ExtResource("4_bjfp8")
icon_alignment = 1
expand_icon = true

[node name="Infos" type="VBoxContainer" parent="SizeController/ComponentControl/ComponentControl/ComponentControl"]
unique_name_in_owner = true
visible = false
layout_mode = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="SizeController/ComponentControl/ComponentControl/ComponentControl"]
layout_mode = 2
theme_override_constants/margin_left = 15

[node name="Components" type="HBoxContainer" parent="SizeController/ComponentControl/ComponentControl/ComponentControl/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="LastControl" type="Control" parent="SizeController/ComponentControl/ComponentControl/ComponentControl/MarginContainer/Components"]
unique_name_in_owner = true
layout_mode = 2

[node name="GlobalGetter" type="Node2D" parent="SizeController/ComponentControl/ComponentControl/ComponentControl"]
position = Vector2(-72, -68)
